# k-edgespot

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: aihub_537_call_files.txt  aihub_537_call_missing_files.txt  aihub_71405_validation_seed_files.txt  confusable_command_pairs.tsv  device_like_profile_top_level.json  korean_commands.yaml  korean_hard_negatives.txt
docs/: aihub_post_augmented_error_review.md  benchmark_results.md  data_sources.md  false_accept_review.md  false_accepts_aihub71405_indomain_k5_far1.jsonl  false_accepts_aihub_augmented_target_keyword_k10_far1.jsonl  false_accepts_distill_hard_tau4_k10_far1.jsonl  false_accepts_distill_hard_tau4_realneg5k_k10_far1.jsonl  false_accepts_distill_tau4_k10_far1.jsonl  implementation_checklist.md  model_stats.json  results_summary.md  wakeword_vs_command_spotting.md
scripts/: apply_audio_review.py  build_aihub_537_invocation_manifest.py  build_aihub_71405_manifest.py  build_device_like_profile.py  build_domain_eval_manifest.py  build_negative_manifest.py  build_prototype_split.py  build_tts_manifest.py  check_mingru.py  collect_shards.py  download_aihub_71405_subset.sh  download_external_data.py  export_edgespot_onnx.py  extract_aihub_archives.py  filter_manifest.py  inspect_false_accepts.py  map_aihub_71405_labels.py  merge_manifests.py  model_stats.py  prepare_audio_review.py  split_manifest.py  summarize_results.py  synthesize_qwen3_tts.py  validate_manifest_audio.py  write_benchmark_report.py
slurm/: download_aihub_537_invocation.sbatch  download_external_data.sbatch  eval_distill_hard_aihub_conservative_target_scan.sbatch  eval_distill_hard_aihub_conservative_test.sbatch  eval_distill_hard_aihub_reviewed_target_scan.sbatch  eval_distill_hard_aihub_reviewed_test.sbatch  eval_edgespot_distill_prototypes.sbatch  eval_edgespot_prototypes.sbatch  eval_ko_noise50far_both_deviceaug_tau4.sbatch  eval_single_prototype.sbatch  (+20 more)
(+29 files in other folders)
