[project]
name = "edgespot-ko"
version = "0.1.0"
description = "Korean EdgeSpot experiments with synthetic Qwen3-TTS command data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "soundfile>=0.12",
    "torch>=2.2",
    "torchaudio>=2.2",
    "tqdm>=4.66",
    "transformers>=4.45",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
